fix(generator): bind null parameters in generated query methods